<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Registrazione" >

<TextView
        android:id="@+id/TWregistrazioneRegistrazione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/registrazioneRegistrazione" />

    <TextView
        android:id="@+id/TWregistrazioneNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TWregistrazioneRegistrazione"
        android:layout_below="@+id/TWregistrazioneRegistrazione"
        android:layout_marginTop="27dp"
        android:text="@string/registrazioneNome" />

    <EditText
        android:id="@+id/ETregistrazioneNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TWregistrazioneNome"
        android:layout_alignBottom="@+id/TWregistrazioneNome"
        android:layout_alignRight="@+id/TWregistrazioneRegistrazione"
        android:ems="10" />

    <TextView
        android:id="@+id/TWregistrazioneCognome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TWregistrazioneNome"
        android:layout_below="@+id/ETregistrazioneNome"
        android:layout_marginTop="28dp"
        android:text="@string/registrazioneCognome" />

    <EditText
        android:id="@+id/ETregistrazioneCognome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TWregistrazioneCognome"
        android:layout_alignBottom="@+id/TWregistrazioneCognome"
        android:layout_alignLeft="@+id/ETregistrazioneNome"
        android:ems="10" />

    <TextView
        android:id="@+id/TWregistrazioneEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TWregistrazioneCognome"
        android:layout_below="@+id/ETregistrazioneCognome"
        android:layout_marginTop="28dp"
        android:text="@string/registrazioneEmail" />

    <EditText
        android:id="@+id/ETregistrazioneEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TWregistrazioneEmail"
        android:layout_alignBottom="@+id/TWregistrazioneEmail"
        android:layout_alignLeft="@+id/ETregistrazioneCognome"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TWregistrazioneUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TWregistrazioneEmail"
        android:layout_below="@+id/ETregistrazioneEmail"
        android:layout_marginTop="28dp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/ETregistrazioneUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TWregistrazioneUsername"
        android:layout_alignBottom="@+id/TWregistrazioneUsername"
        android:layout_alignLeft="@+id/ETregistrazioneEmail"
        android:ems="10" />

    <TextView
        android:id="@+id/TWregistrazionePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TWregistrazioneUsername"
        android:layout_below="@+id/ETregistrazioneUsername"
        android:layout_marginTop="28dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/ETregistrazionePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TWregistrazionePassword"
        android:layout_alignBottom="@+id/TWregistrazionePassword"
        android:layout_alignLeft="@+id/ETregistrazioneUsername"
        android:layout_alignRight="@+id/ETregistrazioneUsername"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/TWregistrazionePassword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TWregistrazionePassword"
        android:layout_below="@+id/ETregistrazionePassword"
        android:layout_marginTop="28dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/ETregistrazionePassword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TWregistrazionePassword1"
        android:layout_alignBottom="@+id/TWregistrazionePassword1"
        android:layout_alignLeft="@+id/ETregistrazionePassword"
        android:layout_alignRight="@+id/ETregistrazionePassword"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/BregistrazioneRegistrati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ETregistrazionePassword1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/registrazioneRegistrati" />

</RelativeLayout>
