<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="10"
    tools:context=".CameraActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
             android:layout_weight="0.3" >

        <TextView
            android:id="@+id/tvProductID"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tvProductID"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvNumProd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tQuantitative"
                android:textColor="#ffffff"
                 android:layout_gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvPriceTot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tTotal"
                android:textAppearance="?android:attr/textAppearanceMedium"
      android:layout_gravity="right"
                android:textColor="#ffffff" />

        </LinearLayout>
		<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium"
                android:layout_gravity="center"
                android:textColor="#ffffff"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="Medium"
                 android:layout_gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:layout_weight="8.5">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnProceed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ProceedWithOrder" />

    </LinearLayout>

</LinearLayout>